--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,9 @@
 <resources>
     <color name="colorPrimary">#23213F</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="panelBackgroundColor">#312F51</color>
+    <color name="colorAccent">#1EF0D7</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorLightGrey">#CCCCCC</color>
+    <color name="colorError">#FF575D</color>
 </resources>
