--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,21 @@
         <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
+    <style name="AppTheme.Launcher">
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
+
+    <style name="LoginBoxesTextFields">
+        <item name="android:layout_marginStart">@dimen/field_margin_default</item>
+        <item name="android:layout_marginEnd">@dimen/field_margin_default</item>
+        <item name="secondaryColor">@color/colorLightGrey</item>
+        <item name="panelBackgroundColor">@color/panelBackgroundColor</item>
+        <item name="primaryColor">@color/colorAccent</item>
+        <item name="errorColor">@color/colorError</item>
+    </style>
+
+    <style name="LoginEditTextFields">
+        <item name="android:textSize">@dimen/text_field_text_size</item>
+        <item name="android:textColor">@color/colorWhite</item>
+    </style>
 </resources>
