--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/login_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -57,7 +58,7 @@
         android:layout_marginBottom="@dimen/login_button_margin_bottom"
         android:background="@drawable/button_ripple"
         android:text="@string/login_button"
-        android:textSize="@dimen/login_button_text_size" />
+        android:textSize="@dimen/text_size_14" />
 
     <ProgressBar
         android:id="@+id/login_progress_bar"
