--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -23,7 +23,7 @@
     </style>
 
     <style name="LoginEditTextFields">
-        <item name="android:textSize">@dimen/text_field_text_size</item>
+        <item name="android:textSize">@dimen/text_size_16</item>
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 </resources>
