--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -26,17 +26,18 @@
     <FrameLayout
         android:id="@+id/fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@color/colorNavView"
-            app:itemIconTint="@drawable/nav_view_selector"
-            app:labelVisibilityMode="unlabeled"
-            app:menu="@menu/bottom_nav_view" />
+        android:layout_height="0dp"
+        android:layout_weight="10">
     </FrameLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_gravity="bottom"
+        android:background="@color/colorNavView"
+        app:itemIconTint="@drawable/nav_view_selector"
+        app:labelVisibilityMode="unlabeled"
+        app:menu="@menu/bottom_nav_view"
+        android:layout_weight="1"/>
 
 </LinearLayout>
